# relativity-clone

./: .gitignore  .oxlintrc.json  RELATIVITY_PLAN.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
backend/: .env.example  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 9b0cf8cf0d67_initial_schema.py
backend/app/: main.py
backend/app/api/: documents.py  groups.py  users.py  workspaces.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  audit.py  base.py  document.py  group.py  user.py  workspace.py
backend/app/services/: chunking.py  ingestion.py  storage.py  vector_store.py
backend/tests/: test_api_server.py  test_db_migration.py
docs/adr/: 0001-python-fastapi-backend.md  0002-chromadb-vector-store.md  0003-provider-agnostic-llm.md  0004-recursive-character-splitting.md  0005-alembic-for-migrations.md  0006-postgresql-schema-design.md
src/: Layout.tsx  index.css  main.tsx  router.tsx
src/api/: groups.ts  users.ts  workspaces.ts
src/components/: Groups.tsx  Home.tsx  RouteError.tsx  Users.tsx  Workspaces.tsx
src/components/ui/: provider.tsx
src/data/: groups.ts  users.ts  workspaces.ts
src/features/documents/: loaders.ts  types.ts
src/features/documents/api/: documents.ts
src/features/documents/components/: Documents.tsx
src/features/groups/: loaders.ts
src/features/groups/api/: groups.ts
src/features/groups/components/: Groups.tsx
src/features/users/: loaders.ts
src/features/users/api/: users.ts
src/features/users/components/: Users.tsx
src/features/workspaces/: loaders.ts
src/features/workspaces/api/: workspaces.ts
src/features/workspaces/components/: Workspaces.tsx
src/lib/: api-client.ts
src/loaders/: groups.ts  users.ts  workspaces.ts
src/store/: index.ts
