[project]
name = "relativity-backend"
version = "0.1.0"
description = "RAG-powered legal AI platform backend"
requires-python = ">=3.11"
dependencies = [
  # The web framework — handles HTTP routing, request/response, validation
  "fastapi[standard]>=0.115.0",
  # The server that actually runs FastAPI (like Vite's dev server, but for Python)
  "uvicorn[standard]>=0.32.0",
  # ORM — lets us write Python classes instead of raw SQL to define/query tables
  "sqlalchemy>=2.0.0",
  # Migration tool — tracks and applies database schema changes over time
  "alembic>=1.14.0",
  # PostgreSQL driver — the bridge between Python and PostgreSQL
  "psycopg2-binary>=2.9.0",
  # Reads .env files into typed Python settings objects
  "pydantic-settings>=2.7.0",
  # Required for FastAPI to handle file uploads (multipart/form-data)
  "python-multipart>=0.0.12",
  "pdfminer-six>=20221105",
  "python-docx>=1.1.0",
  "email-validator>=2.0.0",
  # Vector store for RAG pipeline — stores and searches document chunk embeddings
  "chromadb>=0.4.22,<=0.4.24",
  # Converts text to embedding vectors — all-MiniLM-L6-v2 runs fully local, no API key
  "sentence-transformers>=2.6.0,<3.0.0",
  # Intel Mac (x86_64) compatibility pins: onnxruntime 1.19+ and torch 2.5+ dropped
  # Intel Mac wheels. These pins ensure uv resolves to versions with x86_64 support.
  "onnxruntime>=1.14.0,<1.19.0",
  "torch<2.3.0",
]

[dependency-groups]
dev = [
  # Test runner (like Vitest but for Python)
  "pytest>=8.0.0",
  # Adds async test support — needed because FastAPI handlers can be async
  "pytest-asyncio>=0.24.0",
  # HTTP client used in tests to call our API endpoints
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
# Ensures uv resolves wheels compatible with Intel Mac (x86_64).
# Without this, uv may select package versions that only have arm64/linux wheels.
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
